# agent-browser-plugin

./: .gitignore  CHANGELOG.md  README.md  __init__.py  browser_panel.py  browser_stream.py  lifecycle.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  runtime.py  tools.py
.github/workflows/: ci.yml
skills/web-browse/: SKILL.md
tests/: conftest.py  test_agent_browser.py  test_browser_stream.py  test_runtime.py
workflows/: browse-and-extract.yaml  fill-form.yaml
